# TripTalk

./: .env.example  .gitignore  ARCHITECTURE_MVP.md  PHASE1_WEEK1_PROGRESS.md  PRODUCT_STRATEGY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
api/: .env.example  alembic.ini  pyproject.toml  railway.json  requirements.txt
api/alembic/versions/: 20260409_000001_create_initial_tables.py  20260414_000002_add_scenario_language_mode_and_session_level.py  20260414_000003_add_user_language_levels.py  20260414_000004_add_scenario_content_fields.py
api/app/: deploy.py  main.py  seed.py
api/app/api/: deps.py
api/app/core/: __init__.py  config.py  database.py  logging.py  rate_limit.py  security.py
api/app/integrations/: __init__.py  openai_client.py  supabase.py
api/app/models/: __init__.py  conversation_session.py  country.py  feedback.py  message.py  profile.py  scenario.py  user.py  user_language_level.py
api/app/repositories/: __init__.py  (+7 more)
api/db_migrations/: env.py
api/prompts/: chile_airport.txt  chile_barista.txt  chile_free.txt  chile_immigration.txt  chile_taxi.txt  feedback_generation.txt  france_bakery.txt  france_restaurant.txt  mexico_airport.txt  mexico_free.txt  mexico_tacos.txt  spain_airport.txt  spain_free.txt  spain_tapas.txt  uk_airport.txt  uk_free.txt  uk_pub.txt  usa_coffee.txt  usa_free.txt  usa_hotel_checkin.txt  usa_immigration.txt
api/tests/: test_audio.py  test_conversation_ownership.py  test_feedback.py  test_history.py  test_seed_service.py  test_user_language_levels.py  test_user_profile.py
src/: App.tsx
(+70 files in other folders)
