[project]
name = "triptalk-api"
version = "0.1.0"
description = "FastAPI backend for TripTalk MVP"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "psycopg[binary]>=3.2.1",
  "PyJWT[crypto]>=2.9.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.1",
  "slowapi>=0.1.9",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.2",
]

[project.scripts]
seed-reference-data = "app.seed:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
